package com.example.keep_in_touch.controller;

public class SearchController {
}
